# bp24

./: .gitignore  README.md  background.js  manifest.json  package.json  popup.html  popup.js  server.js  style.css
bp24-main/: background.js  manifest.json  popup.html  popup.js  style.css
plugin/: INSTALL.md  background.js  package-lock.json  popup.html  popup.js  style.css
plugin-new/: background.js  foreground.js  manifest.json
server/: Dockerfile  index.html  index.html.bak  main.py  objectfind.py  pyproject.toml  requirements.txt  server.py  test-server.py
server/app/: app.py
