[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Conor Scheidt <conorrs@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
clarifai-grpc = "^10.1.6"
python-multipart = "^0.0.9"
apify-client = "^1.6.4"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
